--- a/backend-service-email/.env.example
+++ b/backend-service-email/.env.example
@@ -23,7 +23,8 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_CLIENT=predis
+REDIS_HOST=redis_domvs
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
