--- a/docker-config/supervisord.conf
+++ b/docker-config/supervisord.conf
@@ -8,3 +8,4 @@ autorestart=true
 numprocs=3
 redirect_stderr=true
 stdout_logfile= /var/www/html/backend-service-email/storage/logs/worker.log
+startsecs=0
