--- a/docker-config/composer/Dockerfile
+++ b/docker-config/composer/Dockerfile
@@ -1,5 +1,5 @@
 FROM composer:2
 
-RUN addgroup -g 1000 laravel && adduser -G laravel -g laravel -s /bin/sh -D laravel
+RUN addgroup -g 1000 www && adduser -G www -g www -s /bin/sh -D www
 
 WORKDIR /var/www/html/backend-service-email/
