--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
       - ./backend-service-email/:/var/www/html/backend-service-email
     working_dir: /var/www/html/backend-service-email/
     entrypoint: ['php', 'artisan','key:generate']
+    depends_on:
+      - composer
     networks: 
       - app-network
 
@@ -63,6 +65,8 @@ services:
     volumes:
       - ./backend-service-email/:/var/www/html/backend-service-email/
     working_dir: /var/www/html/backend-service-email/
+    depends_on:
+      - composer
     networks: 
       - app-network
 
