--- a/docker-config/php/Dockerfile
+++ b/docker-config/php/Dockerfile
@@ -24,7 +24,9 @@ RUN apt-get update && apt-get install -y \
 
 RUN docker-php-ext-install mbstring tokenizer mysqli pdo_mysql
 
-RUN curl -sS https://getcomposer.org    /installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
 
 RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
@@ -40,5 +42,6 @@ USER www
 
 WORKDIR  /var/www/html/backend-service-email/
 
+RUN composer install
 
 
